--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>קצת עליי</h2>
-                <p>מפיק ומנהל אירועים עם ניסיון עשיר בהפקת חתונות יוקרתיות ומושקעות</p>
+                <p>מפיק ומנהל אירועים עם ניסיון עשיר בהפקת חתונות מותאמות אישית לכל תקציב וסגנון</p>
             </div>
             <div class="about-content">
                 <div class="about-image">
