--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </div>
             <div class="accessibility-statement-body">
                 <p>אתר זה עומד בדרישות תקנות שוויון זכויות לאנשים עם מוגבלות (התאמות נגישות לשירות), תשע"ג-2013.</p>
-                <p>האתר נבדק ונמצא נגיש בהתאם לתקן הישראלי (ת"י 5568) והבינלא<!DOCTYPE html>
+                <p><!DOCTYPE html>
 <html dir="rtl" lang="he">
 <head>
     <meta charset="UTF-8">
@@ -1698,9 +1698,7 @@
                 <li>כל התמונות באתר מכילות טקסט חלופי</li>
                 <li>כל האלמנטים באתר מוגדרים כראוי לקוראי מסך</li>
             </ul>
-            <h4>פרטי רכז הנגישות:</h4>
-            <p>שם: עודד</p>
-            <p>טלפון: 052-229-8447</p>
+          
             <p>דוא"ל: oded@lalieventsocial.com</p>
             <p>אם מצאתם תקלת נגישות באתר, אנא פנו אלינו ונתייחס לפנייתכם בהקדם.</p>
             <p>הצהרה זו עודכנה בתאריך: 18.04.2025</p>
